deployment/speech-webapp-single-deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speech-webapp-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speech-webapp-test
  template:
    metadata:
      labels:
        app: speech-webapp-test
    spec:
      containers:
      - name: backend
        image: gcr.io/wewyse-centralesupelec-ftv/speech-web-app-dev/api:8c03ba02fdb39fc1b1415681a577bb315ca9d15a
        workingDir: /home/app
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/v0.1/get_random_sentence/
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 3
      - name: frontend
        image: gcr.io/wewyse-centralesupelec-ftv/speech-web-app-dev/frontend:8c03ba02fdb39fc1b1415681a577bb315ca9d15a
        ports:
        - containerPort: 3000
