deployment/speech-webapp-single-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speech-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speech-webapp
  template:
    metadata:
      labels:
        app: speech-webapp
    spec:
      containers:
      - name: backend
        image: gcr.io/wewyse-centralesupelec-ftv/speech-web-app/api:latest
        workingDir: /home/app
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/v0.1/get_random_sentence/
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 3
      - name: frontend
        image: gcr.io/wewyse-centralesupelec-ftv/speech-web-app/frontend:latest
        ports:
        - containerPort: 3000
