deployment/service-ser-webapp-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ser-webapp-dev
spec:
  selector:
    app: speech-webapp
  type: NodePort
  ports:
    - name: frontend
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: backend
      protocol: TCP
      port: 8081
      targetPort: 8081
