deployment/service-ser-webapp-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ser-webapp-test
spec:
  selector:
    app: speech-webapp-test
  type: NodePort
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: backend
      protocol: TCP
      port: 8081
      targetPort: 8081
