deployment/ingress-ser-webapp-dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-ser-webapp-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ser-webapp-dev"
    networking.gke.io/managed-certificates: "certificate-ser-webapp-dev"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: service-ser-webapp-dev
            servicePort: 80
        - path: /api/*
          backend:
            serviceName: service-ser-webapp-dev
            servicePort: 8081
